[gd_scene load_steps=6 format=3 uid="uid://bdhrkiy3lgcxv"]

[ext_resource type="Script" path="res://scenes/screens/game_over_screen.gd" id="1_lrsry"]
[ext_resource type="Theme" uid="uid://7ufvk254irrw" path="res://ui_theme.tres" id="2_bnhkj"]
[ext_resource type="PackedScene" uid="uid://dcj45inn52d1x" path="res://ui_screen.tscn" id="2_xpk08"]
[ext_resource type="PackedScene" uid="uid://6a4dfgetmuf0" path="res://scenes/screens/mute_button.tscn" id="4_onurw"]
[ext_resource type="PackedScene" uid="uid://c6bhjysaijkma" path="res://scenes/screens/rate_app_button.tscn" id="5_gcqi7"]

[node name="game_over_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrsry")

[node name="screen" parent="." instance=ExtResource("2_xpk08")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="screen/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_lock_ = true

[node name="GameOver" type="Label" parent="screen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
theme = ExtResource("2_bnhkj")
theme_type_variation = &"HeaderMedium"
text = "Game Over"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Score" type="Label" parent="screen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 119)
layout_mode = 2
theme = ExtResource("2_bnhkj")
theme_override_font_sizes/font_size = 60
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BestScore" type="Label" parent="screen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 214)
layout_mode = 2
theme = ExtResource("2_bnhkj")
theme_override_font_sizes/font_size = 44
text = "Best Score: 0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TryAgainExtraLife" type="Button" parent="screen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("2_bnhkj")
theme_override_font_sizes/font_size = 40
text = "Watch Ad For

Extra Life"

[node name="TryAgain" type="Button" parent="screen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("2_bnhkj")
text = "Try Again"

[node name="TopBar" type="HBoxContainer" parent="screen/MarginContainer" index="1"]
layout_mode = 2
size_flags_vertical = 0

[node name="MuteButton" parent="screen/MarginContainer/TopBar" instance=ExtResource("4_onurw")]
layout_mode = 2

[node name="spacer" type="Control" parent="screen/MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RateAppButton" parent="screen/MarginContainer/TopBar" instance=ExtResource("5_gcqi7")]
layout_mode = 2

[connection signal="button_up" from="screen/MarginContainer/VBoxContainer/TryAgainExtraLife" to="." method="_on_extra_life_try_again"]
[connection signal="button_up" from="screen/MarginContainer/VBoxContainer/TryAgain" to="." method="_on_try_again_button_up"]

[editable path="screen"]
